--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
-    <title>webSite</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Landing Page FoodPeek</title>
 </head>
 <body>
+    <!--===menu===-->
     <header>
         <nav class="navigation">
             <a href="#" class="logo">F<span>oo</span>D P<span>ee</span>K</a>
@@ -26,6 +27,8 @@
             </div>
         </nav>
     </header>
+
+    <!--===main===-->
     <main>
         <section class="home">
             <div class="home-text">
@@ -35,10 +38,12 @@
                 <a href="#" class="home-btn">Order yours</a>
             </div>
             <div class="home-img">
-                <img src="img/home.png" alt="hamburguer">
+                <img src="./assets/images/imagem.png" alt="hamburguer">
             </div>
         </section>
     </main>
-    <script src="script.js"></script>
+
+    <!--===script===-->
+    <script src="./assets/javascript/script.js"></script>
 </body>
 </html>
